2025-05-27T12:54:55Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15275831721 # 1002
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-27
* notice: last 14d: unq all: 13 53
* notice: prev accum: outdated-unq outdated-all / unq all: 1082 5509 / 1099 5563
* notice: next accum: outdated-unq outdated-all / unq all: 1083 5510 / 1099 5563
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-05-13] / []

2025-05-26T02:08:54Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15244657159 # 999
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-26
* notice: last 14d: unq all: 14 54
* notice: prev accum: outdated-unq outdated-all / unq all: 1081 5508 / 1099 5563
* notice: next accum: outdated-unq outdated-all / unq all: 1082 5509 / 1099 5563
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-05-12] / []

2025-05-25T02:19:53Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15233250591 # 997
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-25
* notice: last 14d: unq all: 15 55
* notice: prev accum: outdated-unq outdated-all / unq all: 1081 5508 / 1098 5540
* notice: next accum: outdated-unq outdated-all / unq all: 1081 5508 / 1099 5563
* notice: prev exec diff / last date diff / accum: unq all: +1 +23 -0 -0 / +2 +24 -0 -0 / 2 24
* notice: removed / changed dates: [] / [2025-05-24]

2025-05-24T12:47:54Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15227201420 # 996