@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-05-27T12:54:55Z",
+  "timestamp" : "2025-05-28T02:06:11Z",
   "count_outdated" : 5510,
   "uniques_outdated" : 1083,
-  "count" : 5563,
-  "uniques" : 1099,
+  "count" : 5567,
+  "uniques" : 1103,
   "views" : [
     {
       "timestamp": "2025-05-14T00:00:00Z",
@@ -85,6 +85,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-05-27T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
+      "count_decinc": [ 0, 4 ],
+      "uniques": 4,
+      "uniques_minmax": [ 4, 4 ],
+      "uniques_decinc": [ 0, 4 ]
     }
   ]
 }
