@@ -1,3 +1,12 @@
+2025-05-28T02:06:11Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15289832005 # 1003
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-28
+* notice: last 14d: unq all: 16 57
+* notice: prev accum: outdated-unq outdated-all / unq all: 1083 5510 / 1099 5563
+* notice: next accum: outdated-unq outdated-all / unq all: 1083 5510 / 1103 5567
+* notice: prev exec diff / last date diff / accum: unq all: +4 +4 -0 -0 / +4 +4 -0 -0 / 4 4
+* notice: removed / changed dates: [] / [2025-05-27]
+
 2025-05-27T12:54:55Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15275831721 # 1002
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-27
